# nordic-ble-sample

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: buildInformation.cmake  buildType.cmake  compileFlags.cmake
cmake/toolchain-files/: nrf5-toolchain-file.cmake
src/: CMakeLists.txt  advertising.cpp  array.hpp  blink.cpp  characteristics.cpp  pairing.cpp
